[package]
name = "ai-intui"
version = "0.9.0"
edition = "2021"

description = "Rust + Ratatui terminal dashboard for AI, robotics, cloud, and data forensics observability."
license = "MIT"
repository = "https://github.com/IoTIVP/ai-intui"
homepage = "https://github.com/IoTIVP/ai-intui"
readme = "README.md"

categories = ["command-line-utilities", "visualization", "development-tools"]
keywords   = ["tui", "ratatui", "observability", "dashboard", "terminal", "rust"]


[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
rand = "0.8"
humantime = "2.1"
